--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2>Operaciones Fundamentales</h2>
         <div class="operation">
             <h3>Suma</h3>
-            <p>La suma consiste en combinar dos o más cantidades en una sola.</p>
+            <p>La suma consiste en combinar dos o más cantidades en una sola, okay? estamos claros? si mijo si.</p>
         </div>
         <div class="operation">
             <h3>Resta</h3>
